manifests/02-second-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-second-pod
  labels:
    app: apache
spec:
  containers:
    - name: apache
      image: httpd:latest   # A different web server (Apache), same node
      ports:
        - containerPort: 80
