manifests/03-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP           # Internal only — Ingress handles the public IP now
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
